alb-sg.tf
resource "aws_security_group" "alb-sg" {
  name        = "alb-sg"
  description = "Allow 80 & 443 inbound traffic"
  vpc_id      = module.utc-vpc.vpc_id


  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {
    Name = "alb-sg"
    env  = "dev"
    team = "config management"
  }
}
